[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Kinematic Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Grapple.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -33.0
margin_right = 16.0
margin_bottom = 32.0
color = Color( 0.294118, 0.607843, 0.792157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grapple" parent="." instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="."]
margin_left = -21.0
margin_top = -47.0
margin_right = 19.0
margin_bottom = -33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump_buffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Coyote_time" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="timeout" from="Coyote_time" to="." method="_on_Coyote_time_timeout"]
